@@ -1,7 +1,8 @@
 Changes for Perl extension Imager-Search
 
 0.12 Sun 31 Aug 2008
-	- 
+	- Implemented the AWESOME BMP24 backend
+	- Cleaned up some of the documentation
 
 0.11 Sat 30 Aug 2008
 	- Wrote new documentation for the main Imager::Search module
